force-app/main/default/objects/sumoapp__Service__c/sumoapp__Service__c.object-meta.xml
<CustomObject>
    <label>SUMO Service/Skill</label>
    <nameField>
        <label>Service/Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Services/Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>