force-app/main/default/objects/sumoapp__Service__c/fields/sumoapp__BufferTimePost__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__BufferTimePost__c</fullName>
    <inlineHelpText>If set, SUMO will create a Post-Buffer appointment after the scheduled appointment, to give the Host a buffer.</inlineHelpText>
    <label>Post-Buffer Time (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>