force-app/main/default/objects/sumoapp__Service__c/fields/sumoapp__Description__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>