force-app/main/default/objects/sumoapp__Service__c/fields/sumoapp__Duration__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Duration (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>