force-app/main/default/objects/sumoapp__Service__c/fields/sumoapp__FontColor__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__FontColor__c</fullName>
    <label>Font Color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>