force-app/main/default/objects/sumoapp__Service__c/fields/sumoapp__Logo__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Logo__c</fullName>
    <label>Logo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>