force-app/main/default/objects/sumoapp__Service__c/recordTypes/sumoapp__Service.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__Service</fullName>
    <active>true</active>
    <label>Appt Services</label>
</RecordType>