force-app/main/default/objects/sumoapp__Service__c/recordTypes/sumoapp__Skill.recordType-meta.xml
<RecordType>
    <fullName>sumoapp__Skill</fullName>
    <active>true</active>
    <label>Host Skills</label>
</RecordType>