force-app/main/default/objects/sumoapp__Service__c/listViews/sumoapp__All.listView-meta.xml
<ListView>
    <fullName>sumoapp__All</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__Duration__c</columns>
    <columns>sumoapp__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>sumoapp__BufferTimePost__c</columns>
    <columns>sumoapp__BufferTimePre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>sumoapp__Service__c.sumoapp__Service</value>
    </filters>
    <label>All Services</label>
</ListView>