force-app/main/default/objects/sumoapp__Service__c/listViews/sumoapp__AllSkills.listView-meta.xml
<ListView>
    <fullName>sumoapp__AllSkills</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>sumoapp__Service__c.sumoapp__Skill</value>
    </filters>
    <label>All Skills</label>
</ListView>